--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
   <p><strong>7. Màn tương tác online của năm đối với bạn?</strong></p>
   <textarea name="q7_tuong_tac" rows="4"></textarea>
 
-  <p><strong>8. Editor của năm đối với bạn là ai? (bản 2)</strong></p>
+  <p><strong>8. Editor của năm đối với bạn là ai?</strong></p>
   <textarea name="q8_editor_2" rows="4"></textarea>
 
   <button type="submit">Gửi câu trả lời</button>
