--- a/form.html
+++ b/form.html
@@ -2,100 +2,43 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Song Lời Tự Định 2025's Quiz</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Cinzel:wght@500;600&display=swap" rel="stylesheet">
-
+<title>Kết quả</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Cinzel&display=swap" rel="stylesheet">
 <style>
 body{
   margin:0;
-  min-height:100vh;
   background:radial-gradient(circle at top,#7a1b2d,#4b000f);
-  font-family:"Playfair Display",serif;
   color:#f5e7c6;
-  overflow-x:hidden;
-}
-body::before{
-  content:"";
-  position:fixed;
-  inset:0;
-  background-image:
-    radial-gradient(#f5e7c644 1px,transparent 1px),
-    radial-gradient(#f5e7c622 1px,transparent 1px);
-  background-size:140px 140px,200px 200px;
-  animation:sparkle 20s linear infinite;
-}
-@keyframes sparkle{
-  to{background-position:500px 1000px,-700px 500px}
-}
-.container{
-  max-width:820px;
-  margin:auto;
-  padding:80px 24px;
-}
-h1{
-  font-family:"Cinzel",serif;
+  font-family:"Playfair Display",serif;
   text-align:center;
-  font-size:38px;
+  padding:80px 20px;
 }
 .box{
+  max-width:700px;
+  margin:auto;
   background:rgba(60,10,20,.85);
-  border-radius:22px;
-  padding:32px;
-  margin-top:32px;
-  box-shadow:0 0 40px rgba(245,231,198,.15);
+  padding:40px;
+  border-radius:24px;
 }
-.option{margin:8px 0}
-input[type=text]{width:100%;padding:12px;border-radius:10px;border:none}
-button{
-  margin-top:40px;
-  width:100%;
-  padding:18px;
-  font-family:"Cinzel",serif;
-  font-size:22px;
-  background:linear-gradient(135deg,#f5e7c6,#d8c48f);
-  border:none;border-radius:16px;
-}
+h1{font-family:"Cinzel",serif}
 </style>
 </head>
-
 <body>
-<div class="container">
-<h1>Song Lời Tự Định 2025's Quiz</h1>
 
 <div class="box">
-<p><b>1. Con số gây chấn động shipdom?</b><br><i>Hint: Micro</i></p>
-<div class="option"><input type="radio" name="q1" value="A"> A. 3325</div>
-<div class="option"><input type="radio" name="q1" value="B"> B. 8992</div>
-<div class="option"><input type="radio" name="q1" value="C"> C. 2711</div>
-<div class="option"><input type="radio" name="q1" value="D"> D. 1506</div>
-</div>
+<h1>KẾT QUẢ</h1>
+<p id="score"></p>
+<hr>
+<p><b>Câu 1:</b> Đáp án đúng là <b>3325</b> – Hãy check lại moment hôm concert ATVNCG Day 6 nhé!</p>
+<p><b>Câu 2:</b> Đáp án đúng là <b>“nhất”</b> - Hãy check lại comment của anh Jun Phạm trên Youtube và Threads nhé!</p>
 
-<div class="box">
-<p><b>2. Điền vào chỗ trống:</b><br>
-"Đỉnh ... với em không?" – "iu ... hok?"</p>
-<input type="text" id="q2" placeholder="Điền 1–3 từ">
-</div>
-
-<button onclick="submitQuiz()">SUBMIT</button>
+<button onclick="location.href='thankyou.html'">NEXT</button>
 </div>
 
 <script>
-function submitQuiz(){
-  let score=0;
-  let q1=document.querySelector('input[name="q1"]:checked')?.value;
-  let q2=document.getElementById("q2").value.trim().toLowerCase();
-
-  if(q1==="A") score++;
-  if(q2==="nhất") score++;
-
-  localStorage.setItem("score",score);
-  localStorage.setItem("q1",q1||"");
-  localStorage.setItem("q2",q2);
-
-  setTimeout(()=>location.href="result.html",800);
-}
+document.getElementById("score").innerText =
+  "Bạn đạt " + localStorage.getItem("score") + "/2 điểm";
 </script>
+
 </body>
 </html>
