--- a/thankyou.html
+++ b/thankyou.html
@@ -2,47 +2,43 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Thank You!</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter&display=swap" rel="stylesheet">
-
+<title>THANK YOU FOR JOINING!</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Cinzel&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#6a0f1c;--box:#4b000f;--gold:#f5e7c6;}
 body{
   margin:0;
-  background:var(--bg);
-  color:var(--gold);
-  font-family:"Inter",sans-serif;
+  height:100vh;
+  background:radial-gradient(circle at top,#7a1b2d,#4b000f);
+  color:#f5e7c6;
   display:flex;
   justify-content:center;
   align-items:center;
-}
-.container{
-  width:92%;
-  max-width:480px;
-  background:var(--box);
-  padding:48px 32px;
-  border-radius:18px;
   text-align:center;
-}
-h2{font-family:"Playfair Display",serif;font-size:36px}
-button{
-  margin-top:24px;
-  padding:14px 26px;
   font-family:"Playfair Display",serif;
-  font-size:20px;
-  background:var(--gold);
-  color:var(--box);
-  border:none;
+}
+.box{
+  background:rgba(60,10,20,.85);
+  padding:50px;
+  border-radius:26px;
+}
+h2{font-family:"Cinzel",serif}
+a{
+  display:inline-block;
+  margin-top:30px;
+  padding:14px 30px;
+  background:linear-gradient(135deg,#f5e7c6,#d8c48f);
+  color:#4b000f;
+  text-decoration:none;
   border-radius:14px;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
+<div class="box">
 <h2>Cảm ơn bạn vì đã không lung lay!</h2>
-<p>Song Lời Tự Định's Quiz</p>
-<button onclick="location.href='index.html'">Quay lại đầu</button>
+<p>Song Lời Tự Định 2025</p>
+<a href="index.html">Quay lại trang chủ</a>
 </div>
 </body>
 </html>
