--- a/form.html
+++ b/form.html
@@ -1,159 +1,139 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Song Lời Tự Định 2025's Quiz</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Song Lời Tự Định 2025's Quiz</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Cinzel:wght@500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Cinzel:wght@500;600&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: radial-gradient(circle at top, #6a1627, #3b0813 75%);
-      font-family: "Playfair Display", serif;
-      color: #f5e7c6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow-x: hidden;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background-image:
-        radial-gradient(#f5e7c644 1px, transparent 1px),
-        radial-gradient(#f5e7c622 1px, transparent 1px);
-      background-size: 120px 120px, 200px 200px;
-      animation: sparkle 20s linear infinite;
-      pointer-events: none;
-    }
-
-    @keyframes sparkle {
-      from { background-position: 0 0, 0 0; }
-      to { background-position: 800px 1400px, -1000px 600px; }
-    }
-
-    .box {
-      width: min(92vw, 680px);
-      background: rgba(30, 5, 10, 0.88);
-      border-radius: 26px;
-      padding: 48px 36px;
-      box-shadow: 0 0 70px rgba(245,231,198,0.15);
-      animation: fadeUp 1s ease;
-    }
-
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    h1 {
-      font-family: "Cinzel", serif;
-      text-align: center;
-      font-size: 34px;
-      margin-bottom: 40px;
-    }
-
-    .question {
-      margin-bottom: 32px;
-      padding: 22px;
-      border-radius: 18px;
-      background: rgba(255,255,255,0.04);
-    }
-
-    .question p {
-      font-size: 20px;
-      margin-bottom: 14px;
-    }
-
-    label {
-      display: block;
-      margin: 8px 0;
-      cursor: pointer;
-      font-size: 18px;
-    }
-
-    input[type="radio"] {
-      margin-right: 8px;
-    }
-
-    input[type="text"] {
-      width: 100%;
-      padding: 14px;
-      font-size: 18px;
-      border-radius: 12px;
-      border: none;
-      outline: none;
-      font-family: "Playfair Display", serif;
-    }
-
-    button {
-      width: 100%;
-      margin-top: 30px;
-      padding: 18px;
-      font-size: 20px;
-      border-radius: 16px;
-      border: none;
-      cursor: pointer;
-      font-family: "Cinzel", serif;
-      background: linear-gradient(135deg, #f5e7c6, #d8c48f);
-      color: #3b0813;
-      transition: 0.3s;
-    }
-
-    button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 12px 30px rgba(245,231,198,0.35);
-    }
-  </style>
+<style>
+body{
+  margin:0;
+  min-height:100vh;
+  background:radial-gradient(circle at top,#6a1627,#3b0813 75%);
+  font-family:"Playfair Display",serif;
+  color:#f5e7c6;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  overflow-x:hidden;
+}
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background-image:
+    radial-gradient(#f5e7c644 1px,transparent 1px),
+    radial-gradient(#f5e7c622 1px,transparent 1px);
+  background-size:120px 120px,200px 200px;
+  animation:sparkle 20s linear infinite;
+  pointer-events:none;
+}
+@keyframes sparkle{
+  from{background-position:0 0,0 0;}
+  to{background-position:800px 1400px,-1000px 600px;}
+}
+.box{
+  width:min(92vw,680px);
+  background:rgba(30,5,10,.88);
+  border-radius:26px;
+  padding:48px 36px;
+  box-shadow:0 0 70px rgba(245,231,198,.15);
+}
+h1{
+  font-family:"Cinzel",serif;
+  text-align:center;
+  font-size:34px;
+  margin-bottom:40px;
+}
+.question{
+  margin-bottom:32px;
+  padding:22px;
+  border-radius:18px;
+  background:rgba(255,255,255,.05);
+}
+label{display:block;margin:8px 0;font-size:18px;cursor:pointer}
+input[type="text"]{
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  font-size:18px;
+  font-family:"Playfair Display",serif;
+}
+button{
+  width:100%;
+  margin-top:30px;
+  padding:18px;
+  font-size:20px;
+  border-radius:16px;
+  border:none;
+  cursor:pointer;
+  font-family:"Cinzel",serif;
+  background:linear-gradient(135deg,#f5e7c6,#d8c48f);
+  color:#3b0813;
+}
+button:hover{
+  transform:translateY(-2px);
+  box-shadow:0 12px 30px rgba(245,231,198,.35);
+}
+</style>
 </head>
 
 <body>
-  <div class="box">
-    <h1>Song Lời Tự Định 2025's Quiz</h1>
+<div class="box">
+<h1>Song Lời Tự Định 2025's Quiz</h1>
 
-    <form id="quizForm">
+<form id="quizForm">
 
-      <!-- CÂU 1 -->
-      <div class="question">
-        <p><strong>1. Con số gây chấn động shipdom?</strong><br><em>Hint: Micro</em></p>
-        <label><input type="radio" name="q1" value="A"> A. 3325</label>
-        <label><input type="radio" name="q1" value="B"> B. 8992</label>
-        <label><input type="radio" name="q1" value="C"> C. 2711</label>
-        <label><input type="radio" name="q1" value="D"> D. 1506</label>
-      </div>
+<div class="question">
+<p><strong>1. Con số gây chấn động shipdom?</strong><br><em>Hint: Micro</em></p>
+<label><input type="radio" name="q1" value="A"> A. 3325</label>
+<label><input type="radio" name="q1" value="B"> B. 8992</label>
+<label><input type="radio" name="q1" value="C"> C. 2711</label>
+<label><input type="radio" name="q1" value="D"> D. 1506</label>
+</div>
 
-      <!-- CÂU 2 -->
-      <div class="question">
-        <p><strong>2. Điền vào chỗ trống:</strong><br>
-        “Đỉnh ... với em không?” – “iu ... hok?”</p>
-        <input type="text" name="q2" placeholder="Điền 1–3 từ">
-      </div>
+<div class="question">
+<p><strong>2. Điền vào chỗ trống:</strong><br>
+“Đỉnh ... với em không?” – “iu ... hok?”</p>
+<input type="text" name="q2" placeholder="Điền 1–3 từ">
+</div>
 
-      <button type="submit">SUBMIT</button>
-    </form>
-  </div>
+<button type="submit">SUBMIT</button>
+</form>
+</div>
 
-  <script>
-    document.getElementById("quizForm").addEventListener("submit", function(e) {
-      e.preventDefault();
+<script>
+document.getElementById("quizForm").addEventListener("submit", e=>{
+  e.preventDefault();
 
-      const q1 = document.querySelector('input[name="q1"]:checked')?.value || "";
-      const q2 = document.querySelector('input[name="q2"]').value.trim().toLowerCase();
+  const user = {
+    q1: document.querySelector('input[name="q1"]:checked')?.value || "",
+    q2: document.querySelector('input[name="q2"]').value.trim().toLowerCase()
+  };
 
-      const answers = {
-        q1,
-        q2
-      };
+  const correct = {
+    q1: "A",
+    q2: "nhất"
+  };
 
-      localStorage.setItem("quizAnswers", JSON.stringify(answers));
-      window.location.href = "result.html";
-    });
-  </script>
+  const explain = {
+    q1: "Hãy check lại sự kiện bùng nổ của concert ATVNCG Day 6 nha!",
+    q2: "Hãy check lại comment của anh Jun Phạm trên YouTube và Threads nha!"
+  };
+
+  let score = 0;
+  if(user.q1 === correct.q1) score++;
+  if(user.q2 === correct.q2) score++;
+
+  localStorage.setItem("quizResult", JSON.stringify({
+    user, correct, explain, score
+  }));
+
+  window.location.href = "result.html";
+});
+</script>
 </body>
 </html>
