--- a/thankyou.html
+++ b/thankyou.html
@@ -2,48 +2,22 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Thank You</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600;700&family=Inter&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body {
-  margin: 0;
-  height: 100vh;
-  background: radial-gradient(circle at top, #7a1e2e, #4b000f 75%);
-  font-family: "Inter", sans-serif;
-  color: #f5e7c6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.box {
-  text-align: center;
-}
-h1 {
-  font-family: "Cormorant Garamond", serif;
-  font-size: 48px;
-}
-p {
-  font-size: 20px;
-}
-a {
-  display: inline-block;
-  margin-top: 30px;
-  padding: 14px 26px;
-  background: linear-gradient(135deg, #f5e7c6, #d8c48f);
-  color: #4b000f;
-  text-decoration: none;
-  border-radius: 14px;
-}
+body{margin:0;height:100vh;background:radial-gradient(circle at top,#7a1e32,#3b0813 75%);
+font-family:"Libre Baskerville",serif;color:#f5e7c6;display:flex;justify-content:center;align-items:center}
+.box{text-align:center;background:rgba(30,5,10,.88);padding:60px;border-radius:30px}
+h1{font-family:"Cinzel",serif;font-size:42px;margin-bottom:20px}
+p{font-size:20px}
+a{display:inline-block;margin-top:30px;padding:14px 26px;font-family:"Cinzel",serif;
+background:linear-gradient(135deg,#f5e7c6,#d8c48f);color:#3b0813;border-radius:14px;text-decoration:none}
 </style>
 </head>
-
 <body>
 <div class="box">
-<h1>Cảm ơn bạn vì đã không lung lay!</h1>
-<p>Bạn đã đi hết chặng đường của Song Lời Tự Định 2025.<p>
+<h1>CẢM ƠN BẠN VÌ ĐÃ KHÔNG LUNG LAY</h1>
+<p>Bạn đã đi hết chặng đường của Song Lời Tự Định 2025. Rất mong được cùng bạn trải qua năm 2026!✨</p>
 <a href="index.html">QUAY LẠI TRANG ĐẦU</a>
 </div>
 </body>
